<resources>
    <string name="app_name">MyGeneration</string>
    <string name="menu_main">Главная</string>
    <string name="menu_ideas">Идеи</string>
    <string name="menu_diary">Дневник</string>
    <string name="menu_messenger">Мессенджер</string>
    <string name="menu_dreams">Мечты</string>
    <string name="my_generation">Мое Поколение</string>
    <string name="mon">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wednesday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="friday">ПТ</string>
    <string name="saturday">СБ</string>
    <string name="sunday">ВС</string>
    <string name="profile">Профиль</string>
    <string name="login">Логин</string>
    <string name="account_type">Тип учетной записи</string>
    <string name="phone">Телефон</string>
    <string name="birthday">Дата рождения</string>
    <string name="city">Город</string>
    <string name="region">Регион</string>
    <string name="auth_explanation">Чтобы использовать все \n функции приложения, авторизуйтесь</string>
    <string name="enter">Войти</string>
    <string name="name">Имя</string>
    <string name="save">Сохранить</string>
    <string name="show_full">Показать полностью</string>
    <string name="roll_up">Свернуть</string>
    <string name="zero">0</string>
    <string name="image_chooser_title">Выберите фото</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="add_event_q">Добавить событие?</string>
    <string name="new_event">Новое событие</string>
    <string name="event_name">Название</string>
    <string name="event_description">Описание</string>
    <string name="event_date">Дата</string>
    <string name="start_time">Время начала</string>
    <string name="finish_time">Время конца</string>
    <string name="choose_date">Выберите дату</string>
    <string name="choose_time">Выберите время</string>
    <string name="field_cannot_be_empty">Поле не должно быть пустым</string>
</resources>