<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MyCardViewStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/medium"
        android:paddingEnd="@dimen/medium">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/add_event_q"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginBottom="@dimen/xlarge"
                android:translationZ="@dimen/xxxlarge"
                app:cornerRadius="@dimen/medium"
                android:textSize="12sp"
                android:text="@string/add" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginBottom="@dimen/xlarge"
                android:layout_marginStart="@dimen/medium"
                android:translationZ="@dimen/xxxlarge"
                app:cornerRadius="@dimen/medium"
                android:textSize="12sp"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>