<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/large"
                    android:src="@drawable/settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logged"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/logged_user_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xxsmall">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/profile_avatar_dimen"
                    android:layout_height="@dimen/profile_avatar_dimen"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/profile_avatar_margin"
                    android:layout_marginEnd="@dimen/profile_avatar_margin"
                    android:src="@drawable/avatar" />

                <ImageView
                    android:id="@+id/exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/large"
                    android:src="@drawable/exit" />

                <ImageView
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/avatar"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/large"
                    android:src="@drawable/edit" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit"
                    android:layout_marginStart="@dimen/xxxlarge"
                    android:layout_marginEnd="@dimen/xxxlarge"
                    android:background="@color/white"
                    android:ems="10"
                    app:boxCornerRadiusBottomEnd="@dimen/xxxlarge"
                    app:boxCornerRadiusBottomStart="@dimen/xxxlarge"
                    app:boxCornerRadiusTopEnd="@dimen/xxxlarge"
                    app:boxCornerRadiusTopStart="@dimen/xxxlarge">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/medium"
                        android:background="@color/white"
                        android:enabled="false"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:hint="@string/name"
                        android:padding="@dimen/small"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_text_layout"
                    style="@style/MyOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fio"
                    android:layout_marginStart="@dimen/xxxlarge"
                    android:layout_marginTop="@dimen/medium"
                    android:layout_marginEnd="@dimen/xxxlarge"
                    android:ems="10"
                    app:boxCornerRadiusBottomEnd="@dimen/xxxlarge"
                    app:boxCornerRadiusBottomStart="@dimen/xxxlarge"
                    app:boxCornerRadiusTopEnd="@dimen/xxxlarge"
                    app:boxCornerRadiusTopStart="@dimen/xxxlarge">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:enabled="false"
                        android:gravity="center"
                        android:hint="@string/login"
                        android:inputType="textPersonName"
                        android:padding="@dimen/small"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/account_type_text_layout"
                    style="@style/MyOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_text_layout"
                    android:layout_marginStart="@dimen/xxxlarge"
                    android:layout_marginTop="@dimen/medium"
                    android:layout_marginEnd="@dimen/xxxlarge"
                    android:ems="10"
                    app:boxCornerRadiusBottomEnd="@dimen/xxxlarge"
                    app:boxCornerRadiusBottomStart="@dimen/xxxlarge"
                    app:boxCornerRadiusTopEnd="@dimen/xxxlarge"
                    app:boxCornerRadiusTopStart="@dimen/xxxlarge">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/account_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:enabled="false"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:hint="@string/account_type"
                        android:padding="@dimen/small"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_text_layout"
                    style="@style/MyOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/account_type_text_layout"
                    android:layout_marginStart="@dimen/xxxlarge"
                    android:layout_marginTop="@dimen/medium"
                    android:layout_marginEnd="@dimen/xxxlarge"
                    android:ems="10"
                    app:boxCornerRadiusBottomEnd="@dimen/xxxlarge"
                    app:boxCornerRadiusBottomStart="@dimen/xxxlarge"
                    app:boxCornerRadiusTopEnd="@dimen/xxxlarge"
                    app:boxCornerRadiusTopStart="@dimen/xxxlarge">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:enabled="false"
                        android:gravity="center"
                        android:inputType="phone"
                        android:hint="@string/phone"
                        android:padding="@dimen/small"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/birthday_text_layout"
                    style="@style/MyOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phone_text_layout"
                    android:layout_marginStart="@dimen/xxxlarge"
                    android:layout_marginTop="@dimen/medium"
                    android:layout_marginEnd="@dimen/xxxlarge"
                    android:ems="10"
                    app:boxCornerRadiusBottomEnd="@dimen/xxxlarge"
                    app:boxCornerRadiusBottomStart="@dimen/xxxlarge"
                    app:boxCornerRadiusTopEnd="@dimen/xxxlarge"
                    app:boxCornerRadiusTopStart="@dimen/xxxlarge">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:enabled="false"
                        android:gravity="center"
                        android:hint="@string/birthday"
                        android:inputType="date"
                        android:padding="@dimen/small"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/city_text_layout"
                    style="@style/MyOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/birthday_text_layout"
                    android:layout_marginStart="@dimen/xxxlarge"
                    android:layout_marginTop="@dimen/medium"
                    android:layout_marginEnd="@dimen/xxxlarge"
                    android:ems="10"
                    app:boxCornerRadiusBottomEnd="@dimen/xxxlarge"
                    app:boxCornerRadiusBottomStart="@dimen/xxxlarge"
                    app:boxCornerRadiusTopEnd="@dimen/xxxlarge"
                    app:boxCornerRadiusTopStart="@dimen/xxxlarge">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:enabled="false"
                        android:gravity="center"
                        android:hint="@string/city"
                        android:inputType="textPersonName"
                        android:padding="@dimen/small"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        android:translationZ="@dimen/xxxlarge"
        android:visibility="gone"
        app:cornerRadius="@dimen/medium"
        android:layout_marginBottom="@dimen/xxxlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <LinearLayout
        android:id="@+id/unlogged_user_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logged">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/auth_explanation"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:text="@string/enter"
            android:translationZ="@dimen/xxxlarge"
            app:cornerRadius="@dimen/medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone"
        android:background="#663C3737"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>